Code Refactoring. Fixed issue with wrong checkbox position.